test/valid/pow.anf
mod pow {
    def pow(x, n) {
        n match {
            case 0 => 1
            case _ =>
                if (n % 2 == 0) {
                    def y = pow(x, n / 2)
                    y * y
                } else {
                    x * pow(x, n - 1)
                }
        }
    }
}
